Adding in a large chunk of dev dependencies and the file creation utils

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+.firebase/
 /.pnp
 .pnp.js
 
@@ -10,6 +11,9 @@
 
 # production
 /build
+
+#Secrets
+/src/config/secrets.js
 
 # misc
 .DS_Store
