--- a/package.json
+++ b/package.json
@@ -2,21 +2,61 @@
   "name": "gretchen",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "deploy": "yarn build && yarn firebase deploy",
+    "gentempcomp": "node ./utils --isContainer=false",
+    "gentempcont": "node ./utils --isContainer=true",
+    "lint": "eslint \"./**/*.js\"",
+    "lint:style": "node ./node_modules/stylelint/bin/stylelint.js \"**/*.{css,scss}\"",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
+  },
+  "engines": {
+    "yarn": ">=1.13.0",
+    "node": ">=10.15.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "npm run lint -- --fix",
+      "git add"
+    ],
+    "*.{jsx,ts,tsx,css,scss,json}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{css,scss}": [
+      "npm run lint:style -- --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "firebase-tools": "^7.5.0",
+    "fs-extra": "^8.1.0",
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
+    "minimist": "^1.2.0",
+    "prettier": "^1.18.2",
+    "replace-in-file": "^4.1.3",
+    "stylelint": "^11.1.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
